rtest/tests/jsr335/Semantics/LambdaExpressions/FinalParameter/ShouldCompile/syntax01/Test.java
// .result=COMPILE_PASS

public class Test {
	public interface TestInterface {
		public void functMethod(int a, int b, int c); 
	}
	
	public static void main(String[] args) {
		TestInterface t = (int a, final int b, int c) -> {
			a = b + c;
		};
    }
}
